y.output
Terminals which are not used

   COMILLA
   GUION
   BLANCOS
   LINEA
   COMENT_AB
   COMENT_CERR


Grammar

    0 $accept: programa $end

    1 programa: declaracion cuerpo
    2         | cuerpo
    3         | declaracion

    4 cuerpo: sentencia
    5       | cuerpo sentencia

    6 sentencia: asignacion
    7          | iteracion
    8          | decision
    9          | io
   10          | funcion

   11 declaracion: DECVAR dec ENDDEC
   12            | DECVAR ENDDEC

   13 dec: lineadeclara
   14    | dec lineadeclara

   15 lineadeclara: listavar DOSPUNTOS tipo

   16 tipo: INTEGER
   17     | FLOAT
   18     | STRING

   19 listavar: vars

   20 vars: id
   21     | vars COMA id

   22 asignacion: id OP_ASIG exp

   23 exp: termino
   24    | exp OP_SUMA termino
   25    | exp OP_RESTA termino
   26    | factor_str OP_CONCAT id
   27    | factor_str OP_CONCAT cte_str

   28 factor_str: id
   29           | cte_str

   30 termino: factor
   31        | termino OP_POR factor
   32        | termino OP_DIV factor

   33 factor: PAR_AB exp PAR_CERR
   34       | id
   35       | cte_int
   36       | cte_real
   37       | cte_str

   38 cte_int: CTE_INT

   39 cte_real: CTE_REAL

   40 cte_str: CTE_STR

   41 id: ID

   42 funcion: falias

   43 @1: /* empty */

   44 falias: ALIAS ID @1 PORCIENTO ID

   45 @2: /* empty */

   46 @3: /* empty */

   47 @4: /* empty */

   48 fbetween: BETWEEN PAR_AB id @2 COMA CORC_AB exp @3 PYCOMA exp @4 CORC_CERR PAR_CERR

   49 condiciones: comp_Li

   50 @5: /* empty */

   51 condiciones: comp_Li AND @5 comp_Ld

   52 @6: /* empty */

   53 condiciones: comp_Li OR @6 comp_Ld

   54 @7: /* empty */

   55 condiciones: NOT @7 comp_Li
   56            | fbetween

   57 comp_Li: condicion

   58 comp_Ld: condicion

   59 condicion: cond_Li comparador cond_Ld

   60 cond_Li: exp

   61 cond_Ld: exp

   62 comparador: OP_MAY
   63           | OP_MAYIG
   64           | OP_IG
   65           | OP_NOIG
   66           | OP_MENIG
   67           | OP_MEN

   68 @8: /* empty */

   69 iteracion: REPEAT @8 cuerpo UNTIL PAR_AB condiciones PAR_CERR

   70 @9: /* empty */

   71 decision: IF PAR_AB condiciones PAR_CERR cuerpo @9 ENDIF

   72 @10: /* empty */

   73 decision: IF PAR_AB condiciones PAR_CERR cuerpo @10 ELSE cuerpo ENDIF

   74 io: READ id
   75   | WRITE id
   76   | WRITE cte_str


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 41 44
CTE_INT (259) 38
CTE_REAL (260) 39
CTE_STR (261) 40
REPEAT (262) 69
UNTIL (263) 69
IF (264) 71 73
ENDIF (265) 71 73
ELSE (266) 73
AND (267) 51
OR (268) 53
NOT (269) 55
WRITE (270) 75 76
READ (271) 74
INTEGER (272) 16
FLOAT (273) 17
STRING (274) 18
OP_ASIG (275) 22
OP_CONCAT (276) 26 27
OP_SUMA (277) 24
OP_RESTA (278) 25
OP_POR (279) 31
OP_DIV (280) 32
OP_MEN (281) 67
OP_MENIG (282) 66
OP_MAY (283) 62
OP_MAYIG (284) 63
OP_IG (285) 64
OP_NOIG (286) 65
PAR_AB (287) 33 48 69 71 73
PAR_CERR (288) 33 48 69 71 73
CORC_AB (289) 48
CORC_CERR (290) 48
COMA (291) 21 48
COMILLA (292)
PYCOMA (293) 48
DOSPUNTOS (294) 15
GUION (295)
BLANCOS (296)
LINEA (297)
COMENT_AB (298)
COMENT_CERR (299)
PORCIENTO (300) 44
DECVAR (301) 11 12
ENDDEC (302) 11 12
ALIAS (303) 44
BETWEEN (304) 48


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
programa (51)
    on left: 1 2 3, on right: 0
cuerpo (52)
    on left: 4 5, on right: 1 2 5 69 71 73
sentencia (53)
    on left: 6 7 8 9 10, on right: 4 5
declaracion (54)
    on left: 11 12, on right: 1 3
dec (55)
    on left: 13 14, on right: 11 14
lineadeclara (56)
    on left: 15, on right: 13 14
tipo (57)
    on left: 16 17 18, on right: 15
listavar (58)
    on left: 19, on right: 15
vars (59)
    on left: 20 21, on right: 19 21
asignacion (60)
    on left: 22, on right: 6
exp (61)
    on left: 23 24 25 26 27, on right: 22 24 25 33 48 60 61
factor_str (62)
    on left: 28 29, on right: 26 27
termino (63)
    on left: 30 31 32, on right: 23 24 25 31 32
factor (64)
    on left: 33 34 35 36 37, on right: 30 31 32
cte_int (65)
    on left: 38, on right: 35
cte_real (66)
    on left: 39, on right: 36
cte_str (67)
    on left: 40, on right: 27 29 37 76
id (68)
    on left: 41, on right: 20 21 22 26 28 34 48 74 75
funcion (69)
    on left: 42, on right: 10
falias (70)
    on left: 44, on right: 42
@1 (71)
    on left: 43, on right: 44
fbetween (72)
    on left: 48, on right: 56
@2 (73)
    on left: 45, on right: 48
@3 (74)
    on left: 46, on right: 48
@4 (75)
    on left: 47, on right: 48
condiciones (76)
    on left: 49 51 53 55 56, on right: 69 71 73
@5 (77)
    on left: 50, on right: 51
@6 (78)
    on left: 52, on right: 53
@7 (79)
    on left: 54, on right: 55
comp_Li (80)
    on left: 57, on right: 49 51 53 55
comp_Ld (81)
    on left: 58, on right: 51 53
condicion (82)
    on left: 59, on right: 57 58
cond_Li (83)
    on left: 60, on right: 59
cond_Ld (84)
    on left: 61, on right: 59
comparador (85)
    on left: 62 63 64 65 66 67, on right: 59
iteracion (86)
    on left: 69, on right: 7
@8 (87)
    on left: 68, on right: 69
decision (88)
    on left: 71 73, on right: 8
@9 (89)
    on left: 70, on right: 71
@10 (90)
    on left: 72, on right: 73
io (91)
    on left: 74 75 76, on right: 9


state 0

    0 $accept: . programa $end

    ID      shift, and go to state 1
    REPEAT  shift, and go to state 2
    IF      shift, and go to state 3
    WRITE   shift, and go to state 4
    READ    shift, and go to state 5
    DECVAR  shift, and go to state 6
    ALIAS   shift, and go to state 7

    programa     go to state 8
    cuerpo       go to state 9
    sentencia    go to state 10
    declaracion  go to state 11
    asignacion   go to state 12
    id           go to state 13
    funcion      go to state 14
    falias       go to state 15
    iteracion    go to state 16
    decision     go to state 17
    io           go to state 18


state 1

   41 id: ID .

    $default  reduce using rule 41 (id)


state 2

   69 iteracion: REPEAT . @8 cuerpo UNTIL PAR_AB condiciones PAR_CERR

    $default  reduce using rule 68 (@8)

    @8  go to state 19


state 3

   71 decision: IF . PAR_AB condiciones PAR_CERR cuerpo @9 ENDIF
   73         | IF . PAR_AB condiciones PAR_CERR cuerpo @10 ELSE cuerpo ENDIF

    PAR_AB  shift, and go to state 20


state 4

   75 io: WRITE . id
   76   | WRITE . cte_str

    ID       shift, and go to state 1
    CTE_STR  shift, and go to state 21

    cte_str  go to state 22
    id       go to state 23


state 5

   74 io: READ . id

    ID  shift, and go to state 1

    id  go to state 24


state 6

   11 declaracion: DECVAR . dec ENDDEC
   12            | DECVAR . ENDDEC

    ID      shift, and go to state 1
    ENDDEC  shift, and go to state 25

    dec           go to state 26
    lineadeclara  go to state 27
    listavar      go to state 28
    vars          go to state 29
    id            go to state 30


state 7

   44 falias: ALIAS . ID @1 PORCIENTO ID

    ID  shift, and go to state 31


state 8

    0 $accept: programa . $end

    $end  shift, and go to state 32


state 9

    2 programa: cuerpo .
    5 cuerpo: cuerpo . sentencia

    ID      shift, and go to state 1
    REPEAT  shift, and go to state 2
    IF      shift, and go to state 3
    WRITE   shift, and go to state 4
    READ    shift, and go to state 5
    ALIAS   shift, and go to state 7

    $default  reduce using rule 2 (programa)

    sentencia   go to state 33
    asignacion  go to state 12
    id          go to state 13
    funcion     go to state 14
    falias      go to state 15
    iteracion   go to state 16
    decision    go to state 17
    io          go to state 18


state 10

    4 cuerpo: sentencia .

    $default  reduce using rule 4 (cuerpo)


state 11

    1 programa: declaracion . cuerpo
    3         | declaracion .

    ID      shift, and go to state 1
    REPEAT  shift, and go to state 2
    IF      shift, and go to state 3
    WRITE   shift, and go to state 4
    READ    shift, and go to state 5
    ALIAS   shift, and go to state 7

    $default  reduce using rule 3 (programa)

    cuerpo      go to state 34
    sentencia   go to state 10
    asignacion  go to state 12
    id          go to state 13
    funcion     go to state 14
    falias      go to state 15
    iteracion   go to state 16
    decision    go to state 17
    io          go to state 18


state 12

    6 sentencia: asignacion .

    $default  reduce using rule 6 (sentencia)


state 13

   22 asignacion: id . OP_ASIG exp

    OP_ASIG  shift, and go to state 35


state 14

   10 sentencia: funcion .

    $default  reduce using rule 10 (sentencia)


state 15

   42 funcion: falias .

    $default  reduce using rule 42 (funcion)


state 16

    7 sentencia: iteracion .

    $default  reduce using rule 7 (sentencia)


state 17

    8 sentencia: decision .

    $default  reduce using rule 8 (sentencia)


state 18

    9 sentencia: io .

    $default  reduce using rule 9 (sentencia)


state 19

   69 iteracion: REPEAT @8 . cuerpo UNTIL PAR_AB condiciones PAR_CERR

    ID      shift, and go to state 1
    REPEAT  shift, and go to state 2
    IF      shift, and go to state 3
    WRITE   shift, and go to state 4
    READ    shift, and go to state 5
    ALIAS   shift, and go to state 7

    cuerpo      go to state 36
    sentencia   go to state 10
    asignacion  go to state 12
    id          go to state 13
    funcion     go to state 14
    falias      go to state 15
    iteracion   go to state 16
    decision    go to state 17
    io          go to state 18


state 20

   71 decision: IF PAR_AB . condiciones PAR_CERR cuerpo @9 ENDIF
   73         | IF PAR_AB . condiciones PAR_CERR cuerpo @10 ELSE cuerpo ENDIF

    ID        shift, and go to state 1
    CTE_INT   shift, and go to state 37
    CTE_REAL  shift, and go to state 38
    CTE_STR   shift, and go to state 21
    NOT       shift, and go to state 39
    PAR_AB    shift, and go to state 40
    BETWEEN   shift, and go to state 41

    exp          go to state 42
    factor_str   go to state 43
    termino      go to state 44
    factor       go to state 45
    cte_int      go to state 46
    cte_real     go to state 47
    cte_str      go to state 48
    id           go to state 49
    fbetween     go to state 50
    condiciones  go to state 51
    comp_Li      go to state 52
    condicion    go to state 53
    cond_Li      go to state 54


state 21

   40 cte_str: CTE_STR .

    $default  reduce using rule 40 (cte_str)


state 22

   76 io: WRITE cte_str .

    $default  reduce using rule 76 (io)


state 23

   75 io: WRITE id .

    $default  reduce using rule 75 (io)


state 24

   74 io: READ id .

    $default  reduce using rule 74 (io)


state 25

   12 declaracion: DECVAR ENDDEC .

    $default  reduce using rule 12 (declaracion)


state 26

   11 declaracion: DECVAR dec . ENDDEC
   14 dec: dec . lineadeclara

    ID      shift, and go to state 1
    ENDDEC  shift, and go to state 55

    lineadeclara  go to state 56
    listavar      go to state 28
    vars          go to state 29
    id            go to state 30


state 27

   13 dec: lineadeclara .

    $default  reduce using rule 13 (dec)


state 28

   15 lineadeclara: listavar . DOSPUNTOS tipo

    DOSPUNTOS  shift, and go to state 57


state 29

   19 listavar: vars .
   21 vars: vars . COMA id

    COMA  shift, and go to state 58

    $default  reduce using rule 19 (listavar)


state 30

   20 vars: id .

    $default  reduce using rule 20 (vars)


state 31

   44 falias: ALIAS ID . @1 PORCIENTO ID

    $default  reduce using rule 43 (@1)

    @1  go to state 59


state 32

    0 $accept: programa $end .

    $default  accept


state 33

    5 cuerpo: cuerpo sentencia .

    $default  reduce using rule 5 (cuerpo)


state 34

    1 programa: declaracion cuerpo .
    5 cuerpo: cuerpo . sentencia

    ID      shift, and go to state 1
    REPEAT  shift, and go to state 2
    IF      shift, and go to state 3
    WRITE   shift, and go to state 4
    READ    shift, and go to state 5
    ALIAS   shift, and go to state 7

    $default  reduce using rule 1 (programa)

    sentencia   go to state 33
    asignacion  go to state 12
    id          go to state 13
    funcion     go to state 14
    falias      go to state 15
    iteracion   go to state 16
    decision    go to state 17
    io          go to state 18


state 35

   22 asignacion: id OP_ASIG . exp

    ID        shift, and go to state 1
    CTE_INT   shift, and go to state 37
    CTE_REAL  shift, and go to state 38
    CTE_STR   shift, and go to state 21
    PAR_AB    shift, and go to state 40

    exp         go to state 60
    factor_str  go to state 43
    termino     go to state 44
    factor      go to state 45
    cte_int     go to state 46
    cte_real    go to state 47
    cte_str     go to state 48
    id          go to state 49


state 36

    5 cuerpo: cuerpo . sentencia
   69 iteracion: REPEAT @8 cuerpo . UNTIL PAR_AB condiciones PAR_CERR

    ID      shift, and go to state 1
    REPEAT  shift, and go to state 2
    UNTIL   shift, and go to state 61
    IF      shift, and go to state 3
    WRITE   shift, and go to state 4
    READ    shift, and go to state 5
    ALIAS   shift, and go to state 7
